@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.233 2009-11-27 21:15:48 franklahm Exp $
+dnl $Id: configure.in,v 1.234 2009-12-18 13:01:15 franklahm Exp $
 dnl configure.in for netatalk
 
 AC_INIT(etc/afpd/main.c)
@@ -1210,8 +1210,6 @@ AC_OUTPUT([Makefile
 	contrib/Makefile
 	contrib/macusers/Makefile
 	contrib/macusers/macusers
-	contrib/nu/Makefile
-	contrib/nu/nu
 	contrib/printing/Makefile
 	contrib/shell_utils/Makefile
 	contrib/shell_utils/afpd-mtab.pl
