@@ -1,5 +1,0 @@
-# Makefile.am for contrib/nu
-
-bin_SCRIPTS = nu
-
-EXTRA_DIST = nu.in
